terminando as configurações css de hoje

--- a/projeto_Carros/styles.css
+++ b/projeto_Carros/styles.css
@@ -190,3 +190,58 @@ section{
 
     }
 }
+
+
+section{
+    & .list{
+        & .item{
+            /*os itens vão aparecer na tela horizontalmente, aparecendo na tela toda*/
+            transform: translateX(100vw);
+            transition: 0.5s;
+            opacity: 0;
+
+            & .car-image{
+                & img{
+                    transform: rotate(0); /*rotação inicial da imagem para ficar reto, e depois rotacionar*/
+                    transition: 0.5s;
+                    transition-delay: 0.3s;
+                }
+            }
+
+            & .content{
+                & .car-information, h2, .description, .information{
+                    transform: translateX(200px);
+                    transition: 0.7s;
+                    transition-delay: 0.3s;
+                }
+                & h2{
+                    transition-delay: 0.5s;
+                }
+                & .description{
+                    transition-delay: 0.7s;
+                }
+                & .information{
+                    transition-delay: 0.9s;
+                }
+            }
+        }
+        & .active{
+            transform: translateX(0);
+            transition: 0.5s;
+            opacity: 1;
+
+             & .car-image{
+                & img{
+                    transform: rotate(-20deg);
+                }
+            }
+
+            & .content{
+                & .car-information, h2, .description, .information{
+                    transform: translateX(0);
+                    opacity: 1;
+                }
+            }
+        }
+    }
+}
