--- a/projeto_Carros/styles.css
+++ b/projeto_Carros/styles.css
@@ -62,6 +62,18 @@ section{
                     width: 100%;
                     transform: rotate(-20deg);
                 }
+
+                &::before{
+                    content: '';
+                    position: absolute;
+                    background-color: #000;
+                    width: 100%;
+                    height: 100px;
+                    top: 150%;
+                    left: 50px;
+                    border-radius: 50%;
+                    filter: blur(50px);
+                }
             }
 
             & .content{
@@ -112,7 +124,7 @@ section{
                 position: absolute;
                 height: 200px;
                 width: 100%;
-                top: 50%;
+                top: 150%;
                 border-top: 1px solid white;
             }   
 
@@ -135,8 +147,8 @@ section{
         & button{
 
             top: 60%;
-            width: 50px;
-            height: 50px;
+            width: 80px;
+            height: 80px;
             border-radius: 50%;
             border: none;
             cursor: pointer;
@@ -194,9 +206,11 @@ section{
 
 section{
     & .list{
+        --calculation:1;
+
         & .item{
             /*os itens vão aparecer na tela horizontalmente, aparecendo na tela toda*/
-            transform: translateX(100vw);
+            transform: translateX(calc(100vw * var(--calculation)));
             transition: 0.5s;
             opacity: 0;
 
@@ -210,7 +224,7 @@ section{
 
             & .content{
                 & .car-information, h2, .description, .information{
-                    transform: translateX(200px);
+                    transform: translateX(calc(200px * var(--calculation)));
                     transition: 0.7s;
                     transition-delay: 0.3s;
                 }
