--- a/kanban-drag-and-drop/style.css
+++ b/kanban-drag-and-drop/style.css
@@ -16,6 +16,131 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
 }
-.user > img{
-    width: 50px;
+.kanban{
+    display: flex;
+    gap: 24px;
+    padding: 24px;
+    width: 100%;
+    height: 90vh;
+    overflow-x: auto;
+}
+.kanban-column{
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+    height: 100%;
+    overflow-y: auto;
+    background-color: #f6f8fc;
+    border-radius: 12px;
+    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+    padding: 12px;
+    overflow: hidden;
+    position: relative;
+    min-width: 252px;
+}
+.kanban-column::after{
+    position: absolute;
+    content: '';
+    height: 5px;
+    width: 100%;
+    top:0;
+    left: 0;
+}
+.kanban-column[data-id="1"]::after{
+    background-color: #d573b6;
+}
+.kanban-column[data-id="2"]::after{
+    background-color: #fea065;
+}
+.kanban-column[data-id="3"]::after{
+    background-color: #fef565;
+}
+.kanban-column[data-id="4"]::after{
+    background-color: #92a5fd;
+}
+.kanban-column[data-id="5"]::after{
+    background-color: #6ed0bc;
+}
+.kanban-title{
+    display: flex;
+    justify-content: space-between;
+}
+.kanban-title h2{
+    font-size: 18px;
+    color: #4b5563;
+    font-weight: 600;
+
+}
+.add-card{
+    color: #4b5563;
+    font-size: 20px;
+    background-color: transparent;
+    cursor: pointer;
+    border: none;
+}
+
+.kanban-cards{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    height: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+.kanban-card{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    border-radius: 14px;
+    padding: 10px;
+    box-shadow: 0px 5px 5px -3px rgba(0,0,0, 0.1);
+    cursor: pointer;
+}
+.badge{
+    color: #ffffff;
+    width: fit-content;
+    font-size: 12px;
+    padding: 4px 8px;
+    border-radius: 12px;
+}
+.badge.high{
+    background-color: rgb(195, 21, 21);
+}
+.badge.medium{
+    background-color: rgb(169, 169, 30);
+}
+.badge.low{
+    background-color: rgb(32, 32, 181);
+}
+
+.card-infos{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.card-icons{
+    display: flex;
+    gap: 18px;
+}
+.card-icons i{
+    color: #a8a8aa;
+}
+
+.user img{
+    width: 42px;
+    height: 42px;
+    border-radius: 100%;
+    object-fit: cover;
+}
+
+*::-webkit-scrollbar{
+    width: 8px;
+}
+*::-webkit-scrollbar-track{
+    background-color: #dde9fa;
+    border-radius: 8px;
+}
+*::-webkit-scrollbar-thumb{
+    background-color: #0050fb;
+    border-radius: 20px;
 }
